--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:support-v4:23.2.1'
     compile 'eu.medsea.mimeutil:mime-util:2.1.1'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'eu.medsea.mimeutil:mime-util:2.1.1'
+    compile 'org.apache:apache:17'
+    compile 'org.apache.ant:ant-commons-net:1.9.6'
+
 }
